--- a/Graphics/Graphics.vcxproj.filters
+++ b/Graphics/Graphics.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="Lodepng.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="ManipulatedViewer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application.h">
@@ -39,6 +42,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Lodepng.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="ManipulatedViewer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
