--- a/Graphics/Graphics.vcxproj
+++ b/Graphics/Graphics.vcxproj
@@ -58,6 +58,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>opengl32.lib;glu32.lib;glfw3.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -85,12 +86,14 @@
   <ItemGroup>
     <ClCompile Include="Application.cpp" />
     <ClCompile Include="Lodepng.cpp" />
+    <ClCompile Include="ManipulatedViewer.cpp" />
     <ClCompile Include="Texture.cpp" />
     <ClCompile Include="ViewerBase.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application.h" />
     <ClInclude Include="Lodepng.h" />
+    <ClInclude Include="ManipulatedViewer.h" />
     <ClInclude Include="Texture.h" />
     <ClInclude Include="ViewerBase.h" />
   </ItemGroup>
